hw6_lab10/tests/errors/sem_type_mismatch_string_int.kt
// EXPECT: semantic error — Int declared but String value
fun main() {
    var n: Int = "not a number"
}
